data/derived/comb/progs/unify/prog1819.ml.out
Characters 18-19:
  let _ = fixpoint (g, 0);;
                    ^
Error: This expression has type int -> int
       but an expression was expected of type int -> int -> int * bool
       Type int is not compatible with type int -> int * bool 
